increase header height to fix padding on small screens

--- a/src/components/PageHeader/PageHeader.module.css
+++ b/src/components/PageHeader/PageHeader.module.css
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  min-height: 50px;
   align-items: baseline;
   border-bottom: 1px solid rgba(15, 15, 15, 0.4);
 }
